@@ -25,7 +25,7 @@ try:
 except ImportError: # Py2
     from cookielib import CookieJar
 
-from werkzeug._compat import iterlists, iteritems, itervalues, to_native, \
+from werkzeug._compat import iterlists, iteritems, itervalues, to_bytes, \
      string_types, text_type, reraise, wsgi_encoding_dance, \
      make_literal_wrapper
 from werkzeug._internal import _empty_stream, _get_environ
@@ -97,11 +97,12 @@ def stream_encode_multipart(values, use_tempfile=True, threshold=1024 * 500,
                         break
                     write_binary(chunk)
             else:
-                if isinstance(value, string_types):
-                    value = to_native(value, charset)
-                else:
+                if not isinstance(value, string_types):
                     value = str(value)
-                write('\r\n\r\n' + value)
+                else:
+                    value = to_bytes(value, charset)
+                write('\r\n\r\n')
+                write_binary(value)
             write('\r\n')
     write('--%s--\r\n' % boundary)
 
